samples/_failures_safe/1761539141_5d6a2b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ab5689b5.c: In function ‘main’:
./samples/SAFE/__tmp_ab5689b5.c:172: error: expected ‘(’ at end of input
./samples/SAFE/__tmp_ab5689b5.c:171:9: error: expected declaration or statement at end of input
  171 |         if
      |         ^~
./samples/SAFE/__tmp_ab5689b5.c:171:9: error: expected declaration or statement at end of input
